package actorLogic;

public class BotLogic extends ActorLogic {
    public BotLogic(int bonnes){
        super(bonnes);
    }
}
