package actorLogic;

public class PlayerLogic extends ActorLogic {
    public PlayerLogic(int bonnes){
        super(bonnes);
    }
}
