package cardLogic;

public class ObstacleLogic extends CardLogic {
    public ObstacleLogic(String name, int hp){
        super(name,hp);
    }
}
