package cardLogic;

public class TerrestrialLogic extends AnimalLogic {

    public TerrestrialLogic(String name, int hp, int attack, SummonCostLogic summonCostLogic){
        super(name, hp, attack, summonCostLogic);
    }
}
